# image

./: .gitignore  CMakeLists.txt  README.md
examples/: CMakeLists.txt
examples/hello_bmp/: CMakeLists.txt  main.c
include/: image.h
src/: bmp.c  draw.c  image.c  png.c  qoi.c  tiff.c  types.h  util.h
